test/invalidImports/b.ts
export interface IA {}
export interface IB {}
export interface IC {}
